update demo link and source code link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" target="_blank"
-            href="https://drive.google.com/file/d/1UqjoW2pdBcmcbPpv4K3fJbBiz7CjP3cw/view?usp=sharing">
+            href="https://drive.google.com/file/d/1yTj-akHNR76TP6g1ZPjhjUol1EG9AFuM/view?usp=sharing">
             DOWNLOAD PDF HERE</a>
         </li>
       </ul>
@@ -110,7 +110,7 @@
         
         <div style="margin-top: 30px; display: inline-block;">
           <a target="_blank" style="background: none"
-            href="https://drive.google.com/file/d/1QHOCvlNLFVdD8wCgbEBwXMvb_NubnLT1/view?usp=sharing">
+            href="https://drive.google.com/file/d/1Gu83lvMfczRwPskS3ZBRKhrfyqzsnopq/view?usp=sharing">
             <button style="
                   background: rgb(255, 186, 146);
                   width: 150px;
@@ -124,7 +124,7 @@
         </div>
         <div style="margin-top: 30px; display: inline-block;margin-left: 15px;">
           <a target="_blank" style="background: none"
-            href="https://drive.google.com/file/d/1UqjoW2pdBcmcbPpv4K3fJbBiz7CjP3cw/view?usp=sharing">
+            href="https://drive.google.com/file/d/1yTj-akHNR76TP6g1ZPjhjUol1EG9AFuM/view?usp=sharing">
             <button style="
                   background: rgb(255, 186, 146);
                   width: 150px;
@@ -358,24 +358,59 @@
           <hr class="mb-2 mt-0" />
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
+
               <h5 class="mb-1">
-                <a target="_blank" href="https://youtu.be/X8ZFH_fZsIo" style="font-size: 30px">
+                <a target="_blank" style="color: #0a55a5; font-size: 30px">
+                  AI Chess and AI Chinese Chess interactive with Robot Arm
+                </a>
+                &emsp; (YOLOv8 ...)
+              </h5>
+              <div class="h6 mb-1">
+                <a target="_blank"
+                  href="https://youtu.be/7EVB89qOXaM?si=-G3MY66mkipP_fBe"
+                  style="font-size : 18px"><span>Demo play Chess</span>
+                </a>
+                &emsp;|&emsp;
+                <a target="_blank"
+                href="https://youtu.be/pZFpQ4rtwPw?si=XjtAn_bYXUL38VIE"
+                style="font-size : 18px"><span>Demo play Chinese Chess (Xiangqi)</span>
+                </a>
+              </div>
+              <p>- The "AI Chess" project is a project that combines Image Processing, 
+                Arduino, and robotics to apply interactive chess playing with robot arms.</p>
+              <p>
+                - The "AI Chinese Chess" project is a project that combines computer vision (YOLOv8)
+                , Arduino, and robotics to apply interactive chess playing with robot arms.
+              </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">August 2023 - December 2023
+                Internship
+              </span>
+            </div>
+          </div>
+          <hr class="mb-2 mt-0" />
+          <div class="resume-item d-flex flex-column flex-md-row mb-2">
+            <div class="resume-content mr-auto">
+              <h5 class="mb-1">
+                <a target="_blank" style="color: #0a55a5; font-size : 30px">
                   Driver drowsiness system
                 </a>
                 &emsp; (CNN,OpenCV)
               </h5>
               <div class="h6 mb-1">
-                Source code: &emsp;
                 <a target="_blank"
-                  href="https://github.com/nguyenquangtung/DL_Driver-drowsiness-detection.git"><span>Link</span> 
+                  href="https://github.com/nguyenquangtung/DL_Driver-drowsiness-detection.git" 
+                  style="font-size : 18px"><span>Source Code</span> 
                 </a>
                 &emsp;|&emsp;
                 <a target="_blank"
-                href="https://youtu.be/X8ZFH_fZsIo"><span>Demo</span>
+                href="https://youtu.be/X8ZFH_fZsIo" 
+                style="font-size : 18px"><span>Demo</span>
                 </a>
               </div>
               <p>
-                Train a CNN model on a dataset containing examples of both closed and open eyes.
+                - Train a CNN model on a dataset containing examples of both closed and open eyes.
                 This trained model is then used by OpenCV to capture a live video feed from the camera.
                 Each frame from the video feed is
                 passed through the CNN model for processing and classification, determining whether the eyes are open or closed in real-time.
@@ -407,22 +442,23 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <h5 class="mb-1">
-                <a target="_blank" href="https://youtu.be/MSysQp4dc1I" style="font-size: 30px">
+                <a target="_blank" style="color: #0a55a5; font-size: 30px">
                   Chatbot
                 </a>
                 &emsp; (Keras Sequential Model - Flask Framework)
               </h5>
               <div class="h6 mb-1">
-                Source code: &emsp;
                 <a target="_blank"
-                  href="https://github.com/nguyenquangtung/ML-Chatbox.git"><span>Link</span>
+                  href="https://github.com/nguyenquangtung/ML-Chatbox.git"
+                  style="font-size : 18px"><span>Source Code</span>
                 </a>
                 &emsp;|&emsp;
                 <a target="_blank"
-                href="https://youtu.be/MSysQp4dc1I"><span>Demo</span>
+                href="https://youtu.be/MSysQp4dc1I"
+                style="font-size : 18px"><span>Demo</span>
                 </a>
               </div>
-              <p>Build a simple Chatbot using Keras Sequential Model and deploy the model.</p>
+              <p>- Build a simple Chatbot using Keras Sequential Model and deploy the model.</p>
               <p>
                 - NLP (Natural Language Processing) based on tokenizer and label encoder of sklearn library, built Neural Network with Sequential Keras model.
                 Use Flask (API function) and HTML, CSS, and JavaScript to implement Chatbot.
@@ -443,51 +479,24 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <h5 class="mb-1">
-                <a target="_blank" href="https://youtu.be/4ZaxbMdLu2c" style="font-size: 30px">
-                  Application Apply algorithms to the Game
-                </a>
-                &emsp; (AI Algorithms)
-              </h5>
-              <div class="h6 mb-1">
-                Source code: &emsp;
-                <a target="_blank"
-                  href="https://github.com/nguyenquangtung/AI-Nqueens-and-8Puzzles.git"><span>Link</span>
-                </a>
-                &emsp;|&emsp;
-                <a target="_blank"
-                href="https://youtu.be/4ZaxbMdLu2c"><span>Demo</span>
-                </a>
-              </div>
-              <p>Apply AI algorithms to automatically play 8 puzzle and N Queen games.</p>
-              <p>
-                - Apply IDLS algorithm to solve 8 puzzle and Simulated Annealing Search algorithm to solve N Queen game.
-              </p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2022 - December 2022</span>
-            </div>
-          </div>
-          <hr class="mb-2 mt-0" />
-          <div class="resume-item d-flex flex-column flex-md-row mb-2">
-            <div class="resume-content mr-auto">
-              <h5 class="mb-1">
-                <a target="_blank" href="https://ui-web-the-band.vercel.app/" style="font-size: 30px">
+                <a target="_blank" style="color: #0a55a5; font-size: 30px">
                   The Band Website
                 </a>
                 &emsp; (HTML,CSS,JavaScript)
               </h5>
               <div class="h6 mb-1">
-                Source code: &emsp;
                 <a target="_blank"
-                  href="https://github.com/nguyenquangtung/UI-Web-The-Band.git"><span>Link</span>
+                  href="https://github.com/nguyenquangtung/UI-Web-The-Band.git"
+                  style="font-size : 18px"><span>Source Code</span>
                 </a>
               </a>
               &emsp;|&emsp;
               <a target="_blank"
-              href="https://ui-web-the-band.vercel.app/"><span>Demo</span>
+              href="https://ui-web-the-band.vercel.app/"
+              style="font-size : 18px"><span>Demo</span>
               </a>
               </div>
-              <p>The Band's static website.</p>
+              <p>- The Band's static website.</p>
               <p>
                 - Using HTML, CSS and Javascript to build Websites.
               </p>
@@ -501,24 +510,25 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <h5 class="mb-1">
-                <a target="_blank" href="https://youtu.be/DQVGjCHT1J4" style="font-size: 30px">
+                <a target="_blank" style="color: #0a55a5; font-size: 30px">
                   HUMAN SKELETON ESTIMASTINGPROJECT
                 </a>
                 &emsp; (Digital Image processing)
               </h5>
               <div class="h6 mb-1">
-                Source code: &emsp;
                 <a target="_blank"
-                  href="https://github.com/nguyenquangtung/DIP-Human-Skeleton-Estimating.git"><span>Link</span>
+                  href="https://github.com/nguyenquangtung/DIP-Human-Skeleton-Estimating.git"
+                  style="font-size : 18px"><span>Source Code</span>
                 </a>
                 </a>
                 &emsp;|&emsp;
                 <a target="_blank"
-                href="https://youtu.be/DQVGjCHT1J4"><span>Demo</span>
+                href="https://youtu.be/DQVGjCHT1J4" 
+                style="font-size : 18px"><span>Demo</span>
                 </a>
               </div>
               <p>
-                Build a skeleton estimation from a photo or video using recognition patterns
+                - Build a skeleton estimation from a photo or video using recognition patterns
                  (Pattern recognition) so that the app will automatically detect human parts using machine learning algorithms.
               </p>
               <p>
