--- a/index_vnm.html
+++ b/index_vnm.html
@@ -58,7 +58,7 @@
         </li-->
         <li class="nav-item">
           <a class="nav-link" target="_blank"
-            href="https://drive.google.com/file/d/1UqjoW2pdBcmcbPpv4K3fJbBiz7CjP3cw/view?usp=sharing">TẢI FILE PDF</a>
+            href="https://drive.google.com/file/d/1Gu83lvMfczRwPskS3ZBRKhrfyqzsnopq/view?usp=sharing">TẢI FILE PDF</a>
         </li>
       </ul>
     </div>
@@ -109,7 +109,7 @@
 
         <div style="margin-top: 30px; display: inline-block;">
           <a target="_blank" style="background: none"
-            href="https://drive.google.com/file/d/1QHOCvlNLFVdD8wCgbEBwXMvb_NubnLT1/view?usp=sharing">
+            href="https://drive.google.com/file/d/1Gu83lvMfczRwPskS3ZBRKhrfyqzsnopq/view?usp=sharing">
             <button style="
                   background: rgb(255, 186, 146);
                   width: 150px;
@@ -123,7 +123,7 @@
         </div>
         <div style="margin-top: 30px; display: inline-block;margin-left: 15px;">
           <a target="_blank" style="background: none"
-            href="https://drive.google.com/file/d/1UqjoW2pdBcmcbPpv4K3fJbBiz7CjP3cw/view?usp=sharing">
+            href="https://drive.google.com/file/d/1yTj-akHNR76TP6g1ZPjhjUol1EG9AFuM/view?usp=sharing">
             <button style="
                   background: rgb(255, 186, 146);
                   width: 150px;
@@ -385,24 +385,59 @@ e logo" title="Python" height="25" /></span>
           <hr class="mb-2 mt-0" />
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
+
               <h5 class="mb-1">
-                <a target="_blank" href="https://youtu.be/X8ZFH_fZsIo" style="font-size: 30px">
+                <a target="_blank" style="color: #0a55a5; font-size: 30px">
+                  AI Chess and AI Chinese Chess interactive with Robot Arm
+                </a>
+                &emsp; (YOLOv8 ...)
+              </h5>
+              <div class="h6 mb-1">
+                <a target="_blank"
+                  href="https://youtu.be/7EVB89qOXaM?si=-G3MY66mkipP_fBe"
+                  style="font-size : 18px"><span>Demo play Chess</span>
+                </a>
+                &emsp;|&emsp;
+                <a target="_blank"
+                href="https://youtu.be/pZFpQ4rtwPw?si=XjtAn_bYXUL38VIE"
+                style="font-size : 18px"><span>Demo play Chinese Chess (Xiangqi)</span>
+                </a>
+              </div>
+              <p>- Dự án "AI Chess" là một dự án kết hợp Xử lý Hình ảnh, Arduino và robot để áp dụng chơi cờ với robot có khả năng tương tác.</p>
+              <p>
+                - Dự án "AI Chinese Chess" là một dự án kết hợp mô hình thị giác máy tính (YOLOv8), Arduino và robot để áp dụng chơi cờ với robot có khả năng tương tác.
+              </p>
+              
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">August 2023 - December 2023
+                Internship
+              </span>
+            </div>
+          </div>
+
+              <hr class="mb-2 mt-0" />
+              <div class="resume-item d-flex flex-column flex-md-row mb-2">
+                <div class="resume-content mr-auto">
+              <h5 class="mb-1">
+                <a target="_blank" style="color: #0a55a5; font-size : 30px">
                   Driver drowsiness system
                 </a>
                 &emsp; (CNN,OpenCV)
               </h5>
               <div class="h6 mb-1">
-                Source code: &emsp;
                 <a target="_blank"
-                  href="https://github.com/nguyenquangtung/DL_Driver-drowsiness-detection.git"><span>Link</span>
+                  href="https://github.com/nguyenquangtung/DL_Driver-drowsiness-detection.git" 
+                  style="font-size : 18px"><span>Source Code</span>
                 </a>
                 &emsp;|&emsp;
                 <a target="_blank"
-                href="https://youtu.be/X8ZFH_fZsIo"><span>Demo</span>
+                href="https://youtu.be/X8ZFH_fZsIo"
+                style="font-size : 18px"><span>Demo</span>
                 </a>
               </div>
               <p>
-            Đào tạo một mô hình CNN trên một bộ dữ liệu chứa các ví dụ về cả mắt nhắm và mắt mở. 
+            - Đào tạo một mô hình CNN trên một bộ dữ liệu chứa các ví dụ về cả mắt nhắm và mắt mở. 
             Mô hình được đào tạo này sau đó được OpenCV sử dụng để ghi lại nguồn cấp dữ liệu video trực tiếp từ máy ảnh. 
             Mỗi khung hình từ nguồn cấp dữ liệu video được 
             chuyển qua mô hình CNN để xử lý và phân loại, xác định xem mắt đang mở hay nhắm trong thời gian thực.
@@ -430,27 +465,28 @@ e logo" title="Python" height="25" /></span>
               </div>
             </a> -->
           </div>
+
           <hr class="mb-2 mt-0" />
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <h5 class="mb-1">
-                <a target="_blank" href="https://youtu.be/MSysQp4dc1I" style="font-size: 30px">
+                <a target="_blank" style="color: #0a55a5; font-size: 30px">
                   Chatbot
                 </a>
                 &emsp; (Keras Sequential Model - Flask Framework)
               </h5>
               <div class="h6 mb-1">
-                Source code: &emsp;
                 <a target="_blank"
-                  href="https://github.com/nguyenquangtung/ML-Chatbox.git"><span>Link</span>
-                </a>
+                href="https://github.com/nguyenquangtung/ML-Chatbox.git"
+                style="font-size : 18px"><span>Source Code</span>
               </a>
               &emsp;|&emsp;
               <a target="_blank"
-              href="https://youtu.be/MSysQp4dc1I"><span>Demo</span>
+              href="https://youtu.be/MSysQp4dc1I"
+              style="font-size : 18px"><span>Demo</span>
               </a>
               </div>
-              <p>Xây dựng Chatbot đơn giản sử dụng Keras Sequential Model và triển khai mô hình.</p>
+              <p>- Xây dựng Chatbot đơn giản sử dụng Keras Sequential Model và triển khai mô hình.</p>
               <p>
                 - NLP (Xử lý ngôn ngữ tự nhiên) dựa vào tokenizer và label encoder của thư viện sklearn, xây dựng Neural Network với mô hình Sequential Keras.
                  Sử dụng Flask (API function) và HTML, CSS, JavaScript để triển khai Chatbot.
@@ -467,23 +503,24 @@ e logo" title="Python" height="25" /></span>
               <span class="text-primary">August 2022 - December 2022</span>
             </div>
           </div>
-          <hr class="mb-2 mt-0" />
+          <!-- <hr class="mb-2 mt-0" />
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <h5 class="mb-1">
-                <a target="_blank" href="https://youtu.be/4ZaxbMdLu2c" style="font-size: 30px">
+                <a target="_blank" style="color: #0a55a5; font-size: 30px">
                   Application Apply algorithms to the Game
                 </a>
                 &emsp; (AI Algorithms)
               </h5>
               <div class="h6 mb-1">
-                Source code: &emsp;
                 <a target="_blank"
-                  href="https://github.com/nguyenquangtung/AI-Nqueens-and-8Puzzles.git"><span>Link</span>
-                </a>
-                &emsp;|&emsp;
+                href="https://github.com/nguyenquangtung/AI-Nqueens-and-8Puzzles.git"
+                style="font-size : 18px"><span>Source Code</span>
+               </a>
+              &emsp;|&emsp;
                 <a target="_blank"
-                href="https://youtu.be/4ZaxbMdLu2c"><span>Demo</span>
+              href="https://youtu.be/4ZaxbMdLu2c"
+              style="font-size : 18px"><span>Demo</span>
                 </a>
               </div>
               <p>Áp dụng các thuật toán AI để tự động chơi game 8 puzzle và N Queen.</p>
@@ -494,27 +531,30 @@ e logo" title="Python" height="25" /></span>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2022 - December 2022</span>
             </div>
-          </div>
+          </div> -->
+
           <hr class="mb-2 mt-0" />
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <h5 class="mb-1">
-                <a target="_blank" href="https://ui-web-the-band.vercel.app/" style="font-size: 30px">
+                <a target="_blank" style="color: #0a55a5; font-size: 30px">
                   The Band Website
                 </a>
                 &emsp; (HTML,CSS,JavaScript)
               </h5>
-              <div class="h6 mb-1">
-                Source code: &emsp;
+          <div class="h6 mb-1">
                 <a target="_blank"
-                  href="https://github.com/nguyenquangtung/UI-Web-The-Band.git"><span>Link</span>
+                  href="https://github.com/nguyenquangtung/UI-Web-The-Band.git"
+                  style="font-size : 18px"><span>Source Code</span>
                 </a>
-                &emsp;|&emsp;
-                <a target="_blank"
-                href="https://ui-web-the-band.vercel.app/"><span>Demo</span>
-                </a>
+              </a>
+              &emsp;|&emsp;
+              <a target="_blank"
+              href="https://ui-web-the-band.vercel.app/"
+              style="font-size : 18px"><span>Demo</span>
+              </a>
               </div>
-              <p>Website tĩnh của nhóm nhạc The Band.</p>
+              <p>- Website tĩnh của nhóm nhạc The Band.</p>
               <p>
                 - Sử dụng HTML,CSS và Javascript để xây dựng Website
               </p>
@@ -528,23 +568,25 @@ e logo" title="Python" height="25" /></span>
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <h5 class="mb-1">
-                <a target="_blank" href="https://youtu.be/DQVGjCHT1J4" style="font-size: 30px">
+                <a target="_blank" style="color: #0a55a5; font-size: 30px">
                   HUMAN SKELETON ESTIMASTINGPROJECT
                 </a>
                 &emsp; (Digital Image processing)
               </h5>
               <div class="h6 mb-1">
-                Source code: &emsp;
                 <a target="_blank"
-                  href="https://github.com/nguyenquangtung/DIP-Human-Skeleton-Estimating.git"><span>Link</span>
+                  href="https://github.com/nguyenquangtung/DIP-Human-Skeleton-Estimating.git"
+                  style="font-size : 18px"><span>Source Code</span>
+                </a>
                 </a>
                 &emsp;|&emsp;
                 <a target="_blank"
-                href="https://youtu.be/DQVGjCHT1J4"><span>Demo</span>
+                href="https://youtu.be/DQVGjCHT1J4" 
+                style="font-size : 18px"><span>Demo</span>
                 </a>
               </div>
               <p>
-                Xây dựng mô hình lượng khung xương (skeleton estimation ) từ ảnh hoặc video sử dụng các mẫu nhận dạng 
+                - Xây dựng mô hình lượng khung xương (skeleton estimation ) từ ảnh hoặc video sử dụng các mẫu nhận dạng 
                 (Pattern recognition) để ứng dụng sẽ tự động phát hiện các bộ phận của con người bằng cách sử dụng thuật toán máy học.
               </p>
               <p>
