update link and evaluation form

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 </a>
                 &emsp;|&emsp;
                 <a target="_blank"
-                href="https://youtu.be/pZFpQ4rtwPw?si=XjtAn_bYXUL38VIE"
+                href="https://youtube.com/shorts/JhGkF8fEN1g?si=yWoF7oWUL2kUH6PH"
                 style="font-size : 18px"><span>Demo play Chinese Chess (Xiangqi)</span>
                 </a>
               </div>
@@ -648,13 +648,20 @@
                       font-size: 13px;
                       font-weight: 100;
                       font-style: italic;
-                    " href="https://www.tmasolutions.com/">info</a>
+                    " href="https://svnautomation.com/">info</a>
               </h4>
-              <div class="h5 mb-2">Position: AI Intern</div>
+              <div class="h5 mb-2">Position: AI/Computer Vision Intern
+                &nbsp;&nbsp;
+                <a target="_blank" style="
+                      font-size: 13px;
+                      font-weight: 100;
+                      font-style: italic;
+                    " href="https://drive.google.com/file/d/1vd0iMz5V-0zz1_WxLj_czNVBnpw956sM/view?usp=sharing">evaluation form</a>
+              </div>
               <!-- <div class="h5 mb-2">Hướng dẫn: Đào Ngọc Giang (Trưởng phòng phát triển)</div>             -->
               <p style="margin-bottom: 4px">
                 Computer vision intern in the "Research and Development" (R&D) Department. Get research jobs on AI Computer Vision, Embedded Software, and Software Applications. 
-                Here I was involved in a real project, Applying learned knowledge to solve some problems of controlling robot arms to perform any task.
+                Here I was involved in a real project, Applying learned knowledge to solve some problems of controlling robot arms to perform some task.
               </p>
             </div>
             <div class="resume-date text-md-right">
@@ -673,7 +680,14 @@
                       font-style: italic;
                     " href="https://www.tmasolutions.com/">info</a>
               </h4>
-              <div class="h5 mb-2">Position: AI Intern</div>
+              <div class="h5 mb-2">Position: AI/Computer Vision Intern
+                &nbsp;&nbsp;
+                <a target="_blank" style="
+                      font-size: 13px;
+                      font-weight: 100;
+                      font-style: italic;
+                    " href="https://drive.google.com/file/d/1bUV5jV6N-Jl9px__51hLIMi3fSIY_OUH/view?usp=sharing">evaluation form</a>
+              </div>
               <!-- <div class="h5 mb-2">Hướng dẫn: Đào Ngọc Giang (Trưởng phòng phát triển)</div>             -->
               <p style="margin-bottom: 4px">
                 Computer vision intern in the "Artificial Intelligence Innovation" room. Received the research on the SOTA model: YOLO,
