--- a/index_vnm.html
+++ b/index_vnm.html
@@ -399,7 +399,7 @@ e logo" title="Python" height="25" /></span>
                 </a>
                 &emsp;|&emsp;
                 <a target="_blank"
-                href="https://youtu.be/pZFpQ4rtwPw?si=XjtAn_bYXUL38VIE"
+                href="https://youtube.com/shorts/JhGkF8fEN1g?si=yWoF7oWUL2kUH6PH"
                 style="font-size : 18px"><span>Demo play Chinese Chess (Xiangqi)</span>
                 </a>
               </div>
@@ -706,13 +706,20 @@ e logo" title="Python" height="25" /></span>
                       font-size: 13px;
                       font-weight: 100;
                       font-style: italic;
-                    " href="https://www.tmasolutions.com/">info</a>
+                    " href="https://svnautomation.com/">info</a>
               </h4>
-              <div class="h5 mb-2">Vị trí: Thực tập sinh</div>
+              <div class="h5 mb-2">Vị trí: Thực tập sinh AI/ Computer Vision
+                &nbsp;&nbsp;
+                <a target="_blank" style="
+                      font-size: 13px;
+                      font-weight: 100;
+                      font-style: italic;
+                    " href="https://drive.google.com/file/d/1vd0iMz5V-0zz1_WxLj_czNVBnpw956sM/view?usp=sharing">Phiếu đánh giá</a>
+              </div>
               <!-- <div class="h5 mb-2">Hướng dẫn: Đào Ngọc Giang (Trưởng phòng phát triển)</div>             -->
               <p style="margin-bottom: 4px">
                 Thực tập sinh thị giác máy tính tại phòng Research and Development (R&D Department) . Nhận việc nghiên cứu về: AI Computer Vision, Embedded software, Software application.  Tại đây tôi được tham gia vào dự án thực tế, 
-                ứng dụng các kiến thức đã học để giải quyết một số vấn đề điều khiển cánh tay robot để thực hiện một tác vụ nào đó.
+                ứng dụng các kiến thức đã học để giải quyết một số vấn đề điều khiển cánh tay robot để thực hiện một số tác vụ.
               </p>
             </div>
             <div class="resume-date text-md-right">
@@ -730,7 +737,14 @@ e logo" title="Python" height="25" /></span>
                       font-style: italic;
                     " href="https://www.tmasolutions.com/">info</a>
               </h4>
-              <div class="h5 mb-2">Vị trí: Thực tập sinh</div>
+              <div class="h5 mb-2">Vị trí: Thực tập sinh AI/ Computer Vision
+                &nbsp;&nbsp;
+                <a target="_blank" style="
+                      font-size: 13px;
+                      font-weight: 100;
+                      font-style: italic;
+                    " href="https://drive.google.com/file/d/1bUV5jV6N-Jl9px__51hLIMi3fSIY_OUH/view?usp=sharing">Phiếu đánh giá</a>
+              </div>
               <!-- <div class="h5 mb-2">Hướng dẫn: Đào Ngọc Giang (Trưởng phòng phát triển)</div>             -->
               <p style="margin-bottom: 4px">
                 Thực tập sinh thị giác máy tính tại phòng "Đổi mới trí tuệ nhân tạo". Nhận việc nghiên cứu về SOTA model: YOLO, Tại đây tôi được tham gia vào dự án thực tế, qua đó
