--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" target="_blank"
-            href="https://drive.google.com/file/d/1yTj-akHNR76TP6g1ZPjhjUol1EG9AFuM/view?usp=sharing">
+            href="https://drive.google.com/file/d/17jpCvKSE51bjXWFs7Yl2UzmfieSQhE42/view?usp=drive_link">
             DOWNLOAD PDF HERE</a>
         </li>
       </ul>
@@ -110,7 +110,7 @@
         
         <div style="margin-top: 30px; display: inline-block;">
           <a target="_blank" style="background: none"
-            href="https://drive.google.com/file/d/1Gu83lvMfczRwPskS3ZBRKhrfyqzsnopq/view?usp=sharing">
+            href="https://drive.google.com/file/d/1AEy2Z_uCJja5ceO-RRwmw5weqy8nWied/view?usp=drive_link">
             <button style="
                   background: rgb(255, 186, 146);
                   width: 150px;
@@ -124,7 +124,7 @@
         </div>
         <div style="margin-top: 30px; display: inline-block;margin-left: 15px;">
           <a target="_blank" style="background: none"
-            href="https://drive.google.com/file/d/1yTj-akHNR76TP6g1ZPjhjUol1EG9AFuM/view?usp=sharing">
+            href="https://drive.google.com/file/d/17jpCvKSE51bjXWFs7Yl2UzmfieSQhE42/view?usp=drive_link">
             <button style="
                   background: rgb(255, 186, 146);
                   width: 150px;
