--- a/index_vnm.html
+++ b/index_vnm.html
@@ -697,7 +697,37 @@ e logo" title="Python" height="25" /></span>
               <span class="text-primary">04/2022 - nay</span>
             </div>
           </div> -->
-                    <hr class="mb-2" />
+          <hr class="mb-2" />
+          <div class="resume-item d-flex flex-column flex-md-row mb-2">
+            <div class="resume-content mr-auto">
+              <h4 class="mb-0">
+                Công ty cổ phần i-Soft &nbsp;&nbsp;
+                <a target="_blank" style="
+                      font-size: 13px;
+                      font-weight: 100;
+                      font-style: italic;
+                    " href="https://i-soft.com.vn/">info</a>
+              </h4>
+              <div class="h5 mb-2">Vị trí: AI/ Computer Vision Engineer
+                &nbsp;&nbsp;
+                <!-- <a target="_blank" style="
+                      font-size: 13px;
+                      font-weight: 100;
+                      font-style: italic;
+                    " href="https://drive.google.com/file/d/1vd0iMz5V-0zz1_WxLj_czNVBnpw956sM/view?usp=sharing">Phiếu đánh giá</a> -->
+              </div>
+              <!-- <div class="h5 mb-2">Hướng dẫn: Đào Ngọc Giang (Trưởng phòng phát triển)</div>             -->
+              <!-- <p style="margin-bottom: 4px">
+                Thực tập sinh thị giác máy tính tại phòng Research and Development (R&D Department) . Nhận việc nghiên cứu về: AI Computer Vision, Embedded software, Software application.  Tại đây tôi được tham gia vào dự án thực tế, 
+                ứng dụng các kiến thức đã học để giải quyết một số vấn đề điều khiển cánh tay robot để thực hiện một số tác vụ.
+              </p> -->
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">02/2024 - hiện tại</span>
+            </div>
+          </div>
+
+        <hr class="mb-2" />
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
               <h4 class="mb-0">
