--- a/index.html
+++ b/index.html
@@ -384,6 +384,37 @@
       <div class="w-100">
         <h3 class="mb-3">PROJECTS</h3>
         <div style="padding-left: 20px">
+
+          <hr class="mb-2 mt-0" />
+          <div class="resume-item d-flex flex-column flex-md-row mb-2">
+            <div class="resume-content mr-auto">
+
+              <h5 class="mb-1">
+                <a target="_blank" style="color: #0a55a5; font-size: 30px">
+                  CAMERA CALIBRATION
+                </a>
+                &emsp; (openCV ...)
+              </h5>
+              <div class="h6 mb-1">
+                <a target="_blank"
+                  href="https://github.com/nguyenquangtung/Camera_Calibration"
+                  style="font-size : 18px"><span>Source code</span>
+                </a>
+                &emsp;|&emsp;
+                <a target="_blank"
+                href="https://pypi.org/project/TH-camera-calibration/"
+                style="font-size : 18px"><span>Link publish</span>
+                </a>
+              </div>
+              <p>Build a package for easy to calibrate camera (remove distortion of camera for improve accuracy of some vision application) 
+                and publish in PyPi</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">April 2024 - June 2024
+              </span>
+            </div>
+          </div>
+
           <hr class="mb-2 mt-0" />
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
