--- a/index_vnm.html
+++ b/index_vnm.html
@@ -411,10 +411,41 @@ e logo" title="Python" height="25" /></span>
       <div class="w-100">
         <h3 class="mb-3">Dự án đã làm</h3>
         <div style="padding-left: 20px">
+
           <hr class="mb-2 mt-0" />
           <div class="resume-item d-flex flex-column flex-md-row mb-2">
             <div class="resume-content mr-auto">
 
+              <h5 class="mb-1">
+                <a target="_blank" style="color: #0a55a5; font-size: 30px">
+                  CAMERA CALIBRATION
+                </a>
+                &emsp; (openCV ...)
+              </h5>
+              <div class="h6 mb-1">
+                <a target="_blank"
+                  href="https://github.com/nguyenquangtung/Camera_Calibration"
+                  style="font-size : 18px"><span>Source code</span>
+                </a>
+                &emsp;|&emsp;
+                <a target="_blank"
+                href="https://pypi.org/project/TH-camera-calibration/"
+                style="font-size : 18px"><span>Link publish</span>
+                </a>
+              </div>
+              <p>Xây dựng package để dễ dàng calibrate camera (loại bỏ biến
+                dạng của camera để cải thiện một số ứng dụng thị giác máy
+                tính) và publish lên PyPi.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">April 2024 - June 2024
+              </span>
+            </div>
+          </div>
+
+          <hr class="mb-2 mt-0" />
+          <div class="resume-item d-flex flex-column flex-md-row mb-2">
+            <div class="resume-content mr-auto">
               <h5 class="mb-1">
                 <a target="_blank" style="color: #0a55a5; font-size: 30px">
                   AI Chess and AI Chinese Chess interactive with Robot Arm
