--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" target="_blank"
-            href="https://drive.google.com/file/d/17jpCvKSE51bjXWFs7Yl2UzmfieSQhE42/view?usp=drive_link">
+            href="https://drive.google.com/file/d/1ivL0z7RnDSmPI-gvFlnEMf_Y-nnqRxe0/view?usp=sharing">
             DOWNLOAD PDF HERE</a>
         </li>
       </ul>
@@ -139,7 +139,7 @@
         
         <div style="margin-top: 30px; display: inline-block;">
           <a target="_blank" style="background: none"
-            href="https://drive.google.com/file/d/1AEy2Z_uCJja5ceO-RRwmw5weqy8nWied/view?usp=drive_link">
+            href="https://drive.google.com/file/d/1jDliin3fOYL3oNd6EcVEmRyRoXCPg8W9/view?usp=sharing">
             <button style="
                   background: rgb(255, 186, 146);
                   width: 150px;
@@ -153,7 +153,7 @@
         </div>
         <div style="margin-top: 30px; display: inline-block;margin-left: 15px;">
           <a target="_blank" style="background: none"
-            href="https://drive.google.com/file/d/17jpCvKSE51bjXWFs7Yl2UzmfieSQhE42/view?usp=drive_link">
+            href="https://drive.google.com/file/d/1ivL0z7RnDSmPI-gvFlnEMf_Y-nnqRxe0/view?usp=sharing">
             <button style="
                   background: rgb(255, 186, 146);
                   width: 150px;
